GEODE-8705: Cleaning up tests in JdbcDistributedTest.java. Adding "withLocalCompose" into SqlDatabaseConnectionRule to better support docker containerization.